static/style.css
body {
    xfont-size: 95%;
    font-family: 'Roboto Condensed', Roboto, Dosis,
        -apple-system, BlinkMacSystemFont,
        "Segoe UI", "Roboto", "Oxygen",
        "Ubuntu", "Cantarell", "Fira Sans",
        "Droid Sans", "Helvetica Neue", sans-serif;
    font-weight: 300;
    color: #000;
}
h1 {
    font-weight: 500;
    text-transform: uppercase;
}
a:hover {
    /* color: White !important; */
    color: #d00 !important;
    /*
    background-color: #b82000;
    padding: 0px 3px;
    margin-left: -3px;
    margin-right: -3px;
    */
    text-decoration: none;
}
h2 {
    font-weight: 500;
    text-transform: uppercase;
    color: #991800;
    margin-top: 1.5rem;
    font-size: 120%;
}
.startup-name {
    font-size: 130%;
    line-height: 1.25;
}
strong, b {
    font-weight: 400;
    text-transform: uppercase;
    font-size: 90%;
    color: #333;
}
.content {
    margin-top: 2rem;
    margin-bottom: 2rem;
}
.headline {
    color: #c20;
    margin-bottom: 1rem;
}
.headline h1 {
    font-size: 150%;
}
.headline .lead {
    font-size: 123%;
}
a, strong a, a strong {
    color: #049;
}
p {
    margin-top: 1rem;
    margin-bottom: .3rem;
    line-height: 1.33rem;
}
li p {
    margin-top: .4rem;
    margin-bottom: 0;
}
.xpar {
    margin-top: 1rem;
}
.xpar p {
    margin-top: .7rem;
    margin-bottom: .7rem;
    padding-left: 2em;
    text-indent: -2em;
}
.xpar p b:first-child {
    padding-right: .2ex;
}
ul {
    /* The bullet point images are so small it should be better to inline them (in base64) here... */
    xlist-style-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAHElEQVQY02NgYGD4D8VEgcGsmImBTECU1XRWBAAM/RHxU8O3lgAAAABJRU5ErkJggg==);
    xlist-style-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAF0lEQVQY02NgoBX4D8WDUTETTT1FHUUAZf0N9VZ/ZgAAAAAASUVORK5CYII=);
    list-style-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAHElEQVQY02NgIBH8h+LBqJiJgUxAlNXUU0QUAACiLw313RZ+RwAAAABJRU5ErkJggg==);

}
ul.big li {
    margin-bottom: 1rem;
    margin-top: .66rem;
}
.bigcol-left, .bigcol-right {
    margin-bottom: 2rem;
}
.bigcol-right section:first-child h2 {
    margin-top: 0;
}
span.icon-and-text {
    /* I don't want newline between logo and the text */
    white-space: nowrap;
}

